--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Panel</title>
-  <link rel="icon" href="/img/titleLogo.jpg" type="image/jpeg">
+  <link rel="icon" href="/img/titleLogo.png" type="image/png">
 
   <!-- Bootstrap & Font Awesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
