Normalize line endings to LF for deployment

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -175,6 +175,7 @@
                 timer:1500,
                 showConfirmButton:false
             })
+            return
         }
         event.preventDefault();
         try {
